# bastion

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
docs/: architecture.md  mappings.md  runbook.md  threat-model.md
examples/poisoned-server/: server.py
scripts/: benchmark.py
src/bastion/: __init__.py  __main__.py  cli.py  settings.py
src/bastion/approval/: __init__.py  broker.py  store.py
src/bastion/audit/: __init__.py  models.py  query.py  replay.py
src/bastion/catalog/: __init__.py  diff.py  fingerprint.py  registry.py
src/bastion/core/: __init__.py  errors.py  logger.py  models.py  taxonomy.py
src/bastion/dashboard/: __init__.py  server.py
src/bastion/detectors/: __init__.py  instructions.py  patterns.py  pii.py  secrets.py
src/bastion/policies/: default.yaml  minimal.yaml  strict.yaml
src/bastion/proxy/: __init__.py  gateway.py  probe.py  pump.py  session.py
src/bastion/reporters/: __init__.py  html_reporter.py  json_reporter.py  sarif_reporter.py
src/bastion/rules/: __init__.py  base.py  budget.py  engine.py  interceptor.py  registry.py  reload.py  schema.py  types.py
src/bastion/transport/: __init__.py  base.py  framing.py  http.py  stdio.py
tests/: conftest.py
tests/adversarial/: test_adversarial_corpus.py
tests/adversarial/arg_exfiltration/: aws_key_in_body.yaml  ssh_key_path.yaml
tests/adversarial/benign/: clean_tool_call.yaml  format_code.yaml  read_file.yaml  search_issues.yaml
tests/adversarial/hidden_instructions/: nested_schema_payload.yaml  (+1 more)
tests/cli/: test_cli.py
tests/fixtures/: __init__.py  fake_mcp_server.py  memory_transport.py
tests/integration/: test_approval_gateway.py  test_dashboard.py  test_http_gateway.py  test_passthrough.py  test_policy_gateway.py
tests/rules/: test_arg_rules.py  test_capability_grant.py  test_def_rules.py  test_engine.py  test_misc_rules.py
tests/transport/: test_framing.py  test_stdio.py
tests/unit/: test_approval.py  test_audit.py  test_catalog.py  test_detectors.py  test_edge_cases.py  test_fingerprint.py  test_models.py  test_policy_loading.py  test_replay.py  test_reporters.py  test_secrets_pii.py
(+18 files in other folders)
