[project]
name = "bastion"
version = "0.1.0"
description = "Runtime security gateway for MCP (Model Context Protocol) tool-call traffic."
requires-python = ">=3.10,<3.14"
readme = "README.md"
authors = [
    { name = "Goutham Prasanth Pamarthy", email = "pamarthygp@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
]
dependencies = [
    "pydantic~=2.9",
    "pyyaml~=6.0",
    "structlog~=24.4",
    "click~=8.1",
    "aiosqlite~=0.20",
]

[project.optional-dependencies]
http = [
    "fastapi~=0.115",
    "uvicorn[standard]~=0.32",
    "httpx~=0.28",
]
dev = [
    "pytest~=8.3",
    "pytest-asyncio~=0.24",
    "pytest-cov~=6.0",
    "hypothesis~=6.122",
    "ruff~=0.8",
    "mypy~=1.13",
    "pre-commit~=4.0",
    "types-PyYAML",
]
all = [
    "bastion[http,dev]",
]

[project.scripts]
bastion = "bastion.cli:main"

[project.urls]
Source = "https://github.com/gpamarthy/bastion"

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bastion"]

[tool.hatch.build.targets.sdist]
include = ["src/bastion", "README.md", "CHANGELOG.md", "LICENSE"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["tests"]
addopts = "-ra --strict-markers --strict-config --tb=short"
markers = [
    "integration: end-to-end gateway tests against a fake MCP server",
    "adversarial: labeled attack corpus tripwire tests",
    "slow: > 1s individual test",
]
filterwarnings = [
    "error",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]

[tool.coverage.run]
source = ["src/bastion"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 85
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "^\\s*\\.\\.\\.$",
]
